fix fucking viewport overflow; optimize templates

--- a/templates/main.css
+++ b/templates/main.css
@@ -1,102 +1,67 @@
 body {
-    background: linear-gradient(253deg, #000000, #2b596e, #3d4da8);
-    -webkit-animation: Background 25s ease infinite;
-    -moz-animation: Background 25s ease infinite;
-    animation: Background 25s ease infinite;
+    color: #fff;
     margin: 0;
+    padding: 0;
 }
 
-@-webkit-keyframes Background {
-    0% {
-        background-position: 0% 50%
-    }
-
-    50% {
-        background-position: 100% 50%
-    }
-
-    100% {
-        background-position: 0% 50%
-    }
+body:after {
+    content: '';
+    display: block;
+    z-index: -1;
+    position: absolute;
+    top: 0;
+    right: 0;
+    bottom: 0;
+    left: 0;
+    background-image: linear-gradient(0deg, #2b596e 0px, #3d4da8 100%);
+    /* background-size: 200% 300%;
+    animation: rotate-gradient linear 3s infinite;
+    overflow: hidden; */
 }
 
-@-moz-keyframes Background {
-    0% {
-        background-position: 0% 50%
-    }
-
-    50% {
-        background-position: 100% 50%
-    }
-
-    100% {
-        background-position: 0% 50%
-    }
-}
-
-@keyframes Background {
-    0% {
-        background-position: 0% 50%
-    }
-
-    50% {
-        background-position: 100% 50%
-    }
-
-    100% {
-        background-position: 0% 50%
+@keyframes rotate-gradient {
+    to {
+        transform: rotate(360deg)
     }
 }
 
 main {
-    width: 100vw;
-    height: 98vh;
-}
-
-.full-screen {
-    background-size: cover;
-    background-position: center;
-    display: -webkit-flex;
     display: flex;
-    -webkit-flex-direction: column;
-    /* works with row or column */
     flex-direction: column;
-    -webkit-align-items: center;
+    justify-content: center;
     align-items: center;
-    -webkit-justify-content: center;
-    justify-content: inherit;
-    text-align: center;
+    height: 97vh;
+    width: 100%;
+    overflow: hidden;
 }
 
-h1 {
-    color: #fff;
-    font-family: 'Open Sans', sans-serif;
-    font-weight: 800;
-    font-size: 4em;
-    letter-spacing: -2px;
-    text-align: center;
-    text-shadow: 1px 2px 1px rgba(0, 0, 0, .6);
-}
-
-h1:after {
-    display: block;
-    color: #fff;
-    letter-spacing: 1px;
-    font-family: 'Poiret One', sans-serif;
-    font-size: .4em;
-    text-align: center;
-}
-
-.nav {
-    float: center;
-}
-
-li {
-    float: left;
+nav {
+    display: flex;
+    justify-content: space-evenly;
     /* makes list horizontal */
+    float: left;
     list-style-type: none;
-    margin: 0 0 0 30px;
     /* separates 'buttons' */
+    margin: 0 0 0 30px;
+}
+
+nav {
+    display: flex;
+    list-style: none;
+    padding: 0;
+    margin: 1rem;
+}
+
+nav li {
+    margin: 0 1rem;
+}
+
+nav li:first-child {
+    margin-left: 0;
+}
+
+nav li:last-child {
+    margin-right: 0;
 }
 
 a {
@@ -128,55 +93,6 @@ a:focus {
     /* futureproof */
 }
 
-/* Center content horizontally */
-.container {
-    max-width: 50rem;
-    /* equivalent to 800px */
-    margin: 0 auto;
-}
-
-/* Style header */
-header {
-    background-color: #ffffff;
-    padding: 1.25rem;
-    /* equivalent to 20px */
-    box-shadow: 0 0.125rem 0.25rem rgba(0, 0, 0, 0.1);
-    /* equivalent to 0 2px 4px rgba(0,0,0,0.1) */
-}
-
-/* Style navigation */
-nav {
-    margin-top: 1.25rem;
-    /* equivalent to 20px */
-}
-
-nav ul {
-    list-style: none;
-    padding: 0;
-}
-
-nav li {
-    display: inline-block;
-    /* equivalent to 20px */
-}
-
-nav a {
-    text-decoration: none;
-    font-weight: bold;
-}
-
-.wrapper {
-    display: flex;
-    flex-wrap: wrap;
-    justify-content: space-between;
-    align-items: center;
-    height: 100vh;
-  }
-  
-  .item {
-    margin-bottom: 20px;
-  }
-
 /* Style footer */
 footer {
     color: white;
@@ -184,7 +100,7 @@ footer {
     position: absolute;
     bottom: 0;
     left: 0;
-    width: 100vw;
+    width: 100%;
 }
 
 
@@ -195,7 +111,7 @@ footer a {
     width: 100%;
     display: block;
     margin: 0;
-    padding: 1.25rem;
+    padding: 1.25rem 0;
     text-align: center;
 }
 
@@ -217,61 +133,4 @@ footer a {
     -ms-flex-pack: distribute;
     justify-content: space-around;
     background: #ECF0F1;
-}
-
-.toggle {
-    display: inline-block;
-    position: relative;
-    width: 150px;
-    height: 40px;
-    background-color: #777;
-    overflow: hidden;
-    box-shadow: inset 0 10px 25px rgba(0, 0, 0, 0.5), 0px 1px 2px #fff;
-    margin: 10px;
-}
-
-.toggle__input {
-    position: absolute;
-    top: 0;
-    right: 0;
-    bottom: 0;
-    left: 0;
-    display: block;
-    width: 100%;
-    height: 100%;
-    margin: 0;
-    cursor: pointer;
-    opacity: 0;
-    filter: alpha(opacity=0);
-    z-index: 2;
-}
-
-.toggle__label {
-    display: inline-block;
-    width: 75px;
-    height: 40px;
-    background-color: #6ab3e5;
-    color: #FFF;
-    font-size: 1.1em;
-    font-weight: 300;
-    text-align: center;
-    text-shadow: 1px 1px 0px #444;
-    box-shadow: 0 0 0 1px rgba(0, 0, 0, 0.1), 0 1px 2px rgba(0, 0, 0, 0.7);
-    line-height: 40px;
-    -webkit-transition: all 0.2s ease-in-out;
-    transition: all 0.2s ease-in-out;
-}
-
-.toggle__label:before {
-    content: attr(data-off);
-}
-
-.toggle input:checked+label {
-    margin-left: 75px;
-    background: #abd281;
-    color: white;
-}
-
-.toggle input:checked+label:before {
-    content: attr(data-on);
 }
